[package]
name = "callchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"
queues = "1.1.0"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["blocking", "stream", "json"] }
rusty_pool = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }
rusoto_core = "0.48"
rusoto_s3 = "0.48"
futures-core = "0.3.30"
bytes = "1.6.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
